--- a/public/index.html
+++ b/public/index.html
@@ -17,20 +17,20 @@
 </head>
 <body>
   <header>
-    <div class="container">
+    <div class="container-header">
       <nav class="navbar">
         <div id="title-W">
           <p class="title-h1-Header">W.</p>
         </div><!--./title-W-->
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">New</a></li>
-          <li><a href="#">Popular</a></li>
-          <li><a href="#">Trending</a></li>
-          <li><a href="#">Categories</a></li>
+        <ul class="Lista">
+          <li><a href="#" class="header-lista">Home</a></li>
+          <li><a href="#" class="header-lista">New</a></li>
+          <li><a href="#" class="header-lista">Popular</a></li>
+          <li><a href="#" class="header-lista">Trending</a></li>
+          <li><a href="#" class="header-lista">Categories</a></li>
         </ul>
       </nav>
-    </div><!--./container-->
+    </div><!--./container-header-->
   </header><!--./header-->
     
   <main>
