--- a/public/index.html
+++ b/public/index.html
@@ -37,9 +37,8 @@
     <div class="container-grid">
         <section class="grid-section">
           <div class="image-cubes">
-            <img src="" alt="Cubes and circles">
+            <img src="../assets/images/image-web-3-desktop.jpg" alt="Cubes and circles">
           </div><!--./image-cubes-->
-
           <div class="title-Paragraph-Main">
             <div class="title-Main">
               <p class="title-h1-Main">The Bright Future of Web 3.0?</p>
@@ -50,7 +49,6 @@
               <div class="button-read-me">
                 <button>Read more</button>
               </div><!--./button-read-me-->
-
             </div><!--./paragraph-Main-And-Button-->
           </div><!--./title-Paragraph-Main-->
 
